[gd_scene load_steps=3 format=3 uid="uid://32akj7xygp1m"]

[ext_resource type="Theme" uid="uid://bs00b53m5f3ue" path="res://common/theme/default_theme.tres" id="1_fw5nn"]
[ext_resource type="Script" path="res://common/main.gd" id="1_iifbm"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fw5nn")
script = ExtResource("1_iifbm")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.0
offset_right = 125.0
offset_bottom = 104.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 70
text = "Warlock"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(350, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -34.0
offset_right = 48.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Play"

[node name="My Collection" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "My Collection"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Credits"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 38.0
offset_top = 650.0
offset_right = 158.0
offset_bottom = 690.0

[node name="Language Option" type="OptionButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 1
selected = 0
popup/item_0/text = "Fran√ßais"
popup/item_0/id = 1

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/My Collection" to="." method="_on_my_collection_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="item_selected" from="HBoxContainer/Language Option" to="." method="_on_language_option_item_selected"]
